manage big battle field